--- a/index.html
+++ b/index.html
@@ -20,31 +20,43 @@
             }
         }
 
-        
+
         @media (min-width:604px) and (max-width:1180px) {
 
             body {
                 background-image: url(assets/under-construction-tab.png);
             }
         }
-    @media (min-width:1180px) and (max-width:1920px) {
+
+        @media (min-width:1180px) and (max-width:1920px) {
 
             body {
                 background-image: url(assets/under-construction-desktop.png);
             }
         }
 
-        body{
-            background-size: 100%;
+
+        body {
+            height: 100vh;
+            width: 100vw;
+            background-size: cover;
             background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        
+
+        #social-links {
+            height: 200px;
+            width: 200px;
+            background-color: aquamarine;
+        }
     </style>
 </head>
 
 <body>
-
-    <div id="center-text"></div>
+    <div id="social-links">
+    </div>
 </body>
 
 </html>
