--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         body {
             height: 100vh;
             width: 100vw;
-            background-size: cover;
+            background-size: contain;
             background-repeat: no-repeat;
             display: flex;
             justify-content: center;
