--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
 <body>
     <div id="social-links">
-        <a href="tel:7224033433" id="link" style="background-image: url(assets/whatsapp.svg);" ></a>
-        <a href="https://www.instagram.com/bhawanidecorators/" id="link" style="background-image: url(assets/instagram.svg);" ></a>
-        <a href="mailto:bhdecoretors214@gmail.com" id="link" style="background-image: url(assets/mail.svg);" ></a>
+        <a href="tel:7224033433" id="link" style="background-image: url(assets/whatsapp.png);" ></a>
+        <a href="https://www.instagram.com/bhawanidecorators/" id="link" style="background-image: url(assets/instagram.png);" ></a>
+        <a href="mailto:bhdecoretors214@gmail.com" id="link" style="background-image: url(assets/mail.png);" ></a>
     </div>
 </body>
 
