--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             height: 100vh;
             width: 100vw;
             background-size: contain;
+            background-position: center;
             background-repeat: no-repeat;
             display: flex;
             justify-content: center;
