--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
         }
 
         #social-links {
