About Us Page Added + responsive

--- a/product&service.html
+++ b/product&service.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/product&services.css">
-    <title>Bhawani Decorators - Products & Services</title>
+    <title>Products & Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -18,7 +18,7 @@
 
 </head>
 
-<body onload="getData()">
+<body>
     <header>
         <img id="header-logo" src="assets/Logo.svg" alt="Bhawani Decorators Logo">
         <img id="header-title" src="assets/Title.svg" alt="Title of Page">
@@ -106,42 +106,42 @@
     </div>
     <div id="all-products">
         <div class="product-cards">
-            <div class="product-cards-name">Product Name <br><br>
+            <div class="product-cards-name">Product Name
                 <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
                     error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name <br><br>
+            <div class="product-cards-name">Product Name 
                 <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
                     error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name <br><br>
+            <div class="product-cards-name">Product Name 
                 <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
                     error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name <br><br>
+            <div class="product-cards-name">Product Name
                 <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
                     error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name <br><br>
+            <div class="product-cards-name">Product Name 
                 <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
                     error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
             </div>
         </div>
         <div class="product-cards">
-            <div class="product-cards-name">Product Name <br><br>
+            <div class="product-cards-name">Product Name 
                 <div class="product-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maiores
                     blanditiis molestias maxime fuga quae obcaecati consequuntur quia nostrum tempora mollitia quod
                     error aliquam architecto sunt placeat, laborum ipsum beatae.</div>
@@ -153,7 +153,7 @@
         <div id="footer-links">
             <div id="contact">
                 <div id="location">
-                    <img id="contact-icon" src="assets/location.svg" alt="Location Icon" width="30px" height="30px" />
+                    <img class="contact-icon" src="assets/location.svg" alt="Location Icon"  />
                     <div id="contact-details">
                         <div id="detail-title">Address</div>
                         <div id="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
@@ -162,14 +162,14 @@
                     </div>
                 </div>
                 <div id="call-us">
-                    <img id="contact-icon" src="assets/phone.svg" alt="Location Icon" width="30px" height="30px" />
+                    <img class="contact-icon" src="assets/phone.svg" alt="Location Icon" />
                     <div id="contact-details">
                         <div id="detail-title">Call Us</div>
                         <div id="detail-subtitle">+91-70001 62913</div>
                     </div>
                 </div>
                 <div id="email-us">
-                    <img id="contact-icon" src="assets/email.svg" alt="Location Icon" width="30px" height="30px" />
+                    <img class="contact-icon" src="assets/email.svg" alt="Location Icon" />
                     <div id="contact-details">
                         <div id="detail-title">Email Us</div>
                         <div id="detail-subtitle">sara.sanders@gmail.com</div>
@@ -179,15 +179,15 @@
             <div id="social-links">
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
-                    <img id="social-icon" src="assets/whatsapp.svg" width="26" height="26">
+                    <img class="social-icon" src="assets/whatsapp.svg" >
                     <a id="social-link-name" href="#">WhatsApp</a>
                 </div>
                 <div id="instagram">
-                    <img id="social-icon" src="assets/instagram.svg" width="26" height="26">
+                    <img class="social-icon" src="assets/instagram.svg" >
                     <a id="social-link-name" href="#">Instagram</a>
                 </div>
                 <div id="facebook">
-                    <img id="social-icon" src="assets/facebook.svg" width="26" height="26">
+                    <img class="social-icon" src="assets/facebook.svg" >
                     <a id="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                 <a id="quick-link-name" href="">Our Services</a>
             </div>
         </div>
-        <div id="copyright-claims">copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
+        <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
             CreativeDroplets With GraphityFactory.</div>
     </footer>
     <script src="JavaScript/main.js"></script>
