--- a/index_main.html
+++ b/index_main.html
@@ -17,76 +17,16 @@
     <link rel="shortcut icon" href="asserts/Logo.png" />
 </head>
 
-
 <body>
-
-    <div class="model-background hide-model">
-        <div class="modelBox">
-            <img class="close-button" src="assets/close-model.svg" />
-            <div class="model-contents">
-                <div class="mail-form">
-                    <div class="main-heading">Send Us A Message</div>
-                    <div class="text-box">
-                        <label for="name">Your Name</label><br>
-                        <input type="text" name="user-name" id="user-name">
-                    </div>
-                    <div class="text-box">
-                        <label for="mail">Mail</label><br>
-                        <input type="text" name="user-main" id="user-main">
-                    </div>
-                    <div class="text-box">
-                        <label for="message">Message</label><br>
-                        <textarea name="user-message" id="user-message" cols="30" rows="10"></textarea>
-                    </div>
-                    <button class="send-mail-btn" type="button">Send</button>
-                </div>
-                <span class="divider"></span>
-                <div id="contact-info">
-                    <div class="main-heading">Contact Information</div>
-                    <div id="location">
-                        <img class="contact-icon" src="assets/location-black.svg" alt="Location Icon" />
-                        <div class="contact-details">
-                            <div class="detail-title model-style">Address</div>
-                            <div class="detail-subtitle model-style">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE
-                                11(W)
-                                KOLKATA - 700
-                                073,
-                                WEST
-                                BENGAL, INDIA</div>
-                        </div>
-                    </div>
-                    <div id="call-us">
-                        <img class="contact-icon" src="assets/phone-black.svg" alt="Location Icon" />
-                        <div class="contact-details">
-                            <div class="detail-title model-style">Call Us</div>
-                            <div class="detail-subtitle model-style">+91-70001 62913</div>
-                        </div>
-                    </div>
-                    <div id="email-us">
-                        <img class="contact-icon" src="assets/email-black.svg" alt="Location Icon" />
-                        <div class="contact-details">
-                            <div class="detail-title model-style">Email Us</div>
-                            <div class="detail-subtitle model-style">sara.sanders@gmail.com</div>
-                        </div>
-                    </div>
-                    <div class="model-social-links">
-                        <img class="model-social-icon" src="assets/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
-                        <img class="model-social-icon" src="assets/insta-model-icon.svg" alt="Instagram Icon" />
-                        <img class="model-social-icon" src="assets/facebook-model-icon.svg" alt="Facebook Icon" />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!--Main Landing Page Starts-->
     <div id="first-body">
         <header>
             <img id="header-logo" src="assets/Logo.svg" alt="Bhawani Decorators Logo">
-            <img id="header-title" style="cursor: unset;" src="assets/Title.svg" alt="Title of Page">
+            <img id="header-title" src="assets/Title.svg" alt="Title of Page">
             <div id="header-nav">
-                <a class="nav-links" href="pages/product&service.html">Services</a>&nbsp;&nbsp;
-                <a class="nav-links" href="pages/gallery.html">Gallery</a>&nbsp;&nbsp;
-                <a class="nav-links" href="pages/about.html">About Us</a>&nbsp;&nbsp;
+                <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
+                <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
+                <a class="nav-links" href="about.html">About Us</a>&nbsp;&nbsp;
                 <img id="burger-menu" src="assets/burget-menu.svg" alt="Burger Menu Icon">
             </div>
         </header>
@@ -100,8 +40,8 @@
                         elementum. Bibendum auctor at lacinia congue risus posuere. Ultrices .</p>
                 </div>
                 <div id="container-button">
-                    <button type="button" onclick="redirectTo('')">See Products</button>
-                    <button type="button" class="contact-us-btn">Contact Us</button>
+                    <button type="button">See Products</button>
+                    <button type="button">Contact Us</button>
                 </div>
             </div>
             <div id="right-side">
@@ -244,25 +184,25 @@
             <div id="contact">
                 <div id="location">
                     <img class="contact-icon" src="assets/location.svg" alt="Location Icon" />
-                    <div class="contact-details">
-                        <div class="detail-title">Address</div>
-                        <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
+                    <div id="contact-details">
+                        <div id="detail-title">Address</div>
+                        <div id="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
                             WEST
                             BENGAL, INDIA</div>
                     </div>
                 </div>
                 <div id="call-us">
                     <img class="contact-icon" src="assets/phone.svg" alt="Location Icon" />
-                    <div class="contact-details">
-                        <div class="detail-title">Call Us</div>
-                        <div class="detail-subtitle">+91-70001 62913</div>
+                    <div id="contact-details">
+                        <div id="detail-title">Call Us</div>
+                        <div id="detail-subtitle">+91-70001 62913</div>
                     </div>
                 </div>
                 <div id="email-us">
                     <img class="contact-icon" src="assets/email.svg" alt="Location Icon" />
-                    <div class="contact-details">
-                        <div class="detail-title">Email Us</div>
-                        <div class="detail-subtitle">sara.sanders@gmail.com</div>
+                    <div id="contact-details">
+                        <div id="detail-title">Email Us</div>
+                        <div id="detail-subtitle">sara.sanders@gmail.com</div>
                     </div>
                 </div>
             </div>
@@ -270,24 +210,24 @@
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
                     <img class="social-icon" src="assets/whatsapp.svg">
-                    <a class="social-link-name" href="#">WhatsApp</a>
+                    <a id="social-link-name" href="#">WhatsApp</a>
                 </div>
                 <div id="instagram">
                     <img class="social-icon" src="assets/instagram.svg">
-                    <a class="social-link-name" href="#">Instagram</a>
+                    <a id="social-link-name" href="#">Instagram</a>
                 </div>
                 <div id="facebook">
                     <img class="social-icon" src="assets/facebook.svg">
-                    <a class="social-link-name" href="#">Facebook</a>
+                    <a id="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
             <div id="quick-links">
                 <a id="quick-links-title">Quick Links</a>
-                <a class="quick-link-name" href="">Home</a>
-                <a class="quick-link-name" href="">Contact Us</a>
-                <a class="quick-link-name" href="">Our Products</a>
-                <a class="quick-link-name" href="">About Us</a>
-                <a class="quick-link-name" href="">Our Services</a>
+                <a id="quick-link-name" href="">Home</a>
+                <a id="quick-link-name" href="">Contact Us</a>
+                <a id="quick-link-name" href="">Our Products</a>
+                <a id="quick-link-name" href="">About Us</a>
+                <a id="quick-link-name" href="">Our Services</a>
             </div>
         </div>
         <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
@@ -296,7 +236,6 @@
     <!--Footer Ends-->
 
     <script src="JavaScript/gallery.js"></script>
-    <script src="JavaScript/main.js"></script>
 </body>
 
 </html>
