--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="CSS/about.css">
+    <link rel="stylesheet" href="../CSS/about.css">
+    <link rel="stylesheet" href="../CSS/header&footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -15,25 +16,28 @@
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+
 </head>
 
 <body>
     <header>
-        <img id="header-logo" src="assets/Logo.svg" alt="Bhawani Decorators Logo">
-        <img id="header-title" src="assets/Title.svg" alt="Title of Page">
+        <img id="header-logo" src="../assets/Logo.svg" alt="Bhawani Decorators Logo">
+        <img id="header-title" onclick="redirectHome()" src="../assets/Title.svg" alt="Title of Page">
         <div id="header-nav">
-            <a class="nav-links" href="#">Services</a>&nbsp;&nbsp;
-            <a class="nav-links" href="#">Gallery</a>&nbsp;&nbsp;
-            <a class="nav-links" href="#">About Us</a>&nbsp;&nbsp;
-            <img id="burger-menu" src="assets/burget-menu.svg" alt="Burger Menu Icon">
+            <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
+            <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
+            <a class="nav-links" href="about.html">About Us</a>&nbsp;&nbsp;
+            <img id="burger-menu" src="../assets/burget-menu.svg" alt="Burger Menu Icon">
         </div>
     </header>
 
     <div id="hero-section">
         <div id="hero-section-heading">
-            <img id="hero-section-logo" src="assets/hero-section-logo.svg">
+            <img id="hero-section-logo" src="../assets/hero-section-logo.svg">
             <div id="services-title">About Us</div>&nbsp;
-            <div id="services-subtitle">You can choose across various materials form our false ceiling according to your taste, requirements and budget.</div>
+            <div id="services-subtitle">Let us tell you who we are and what is our moto. Let's get to know each other.
+            </div>
         </div>
     </div>
     <div id="hero-divider"></div>
@@ -80,7 +84,7 @@
                     Contact Us
                 </a>
             </div>
-            <img id="who-we-are-img" src="assets/who-we-are-img.png" alt="Description Image">
+            <img id="who-we-are-img" src="../assets/who-we-are-img.png" alt="Description Image">
         </div>
     </div>
 
@@ -107,25 +111,25 @@
             <div id="contact">
                 <div id="location">
                     <img class="contact-icon" src="assets/location.svg" alt="Location Icon" />
-                    <div id="contact-details">
-                        <div id="detail-title">Address</div>
-                        <div id="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
+                    <div class="contact-details">
+                        <div class="detail-title">Address</div>
+                        <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
                             WEST
                             BENGAL, INDIA</div>
                     </div>
                 </div>
                 <div id="call-us">
                     <img class="contact-icon" src="assets/phone.svg" alt="Location Icon" />
-                    <div id="contact-details">
-                        <div id="detail-title">Call Us</div>
-                        <div id="detail-subtitle">+91-70001 62913</div>
+                    <div class="contact-details">
+                        <div class="detail-title">Call Us</div>
+                        <div class="detail-subtitle">+91-70001 62913</div>
                     </div>
                 </div>
                 <div id="email-us">
                     <img class="contact-icon" src="assets/email.svg" alt="Location Icon" />
-                    <div id="contact-details">
-                        <div id="detail-title">Email Us</div>
-                        <div id="detail-subtitle">sara.sanders@gmail.com</div>
+                    <div class="contact-details">
+                        <div class="detail-title">Email Us</div>
+                        <div class="detail-subtitle">sara.sanders@gmail.com</div>
                     </div>
                 </div>
             </div>
@@ -133,30 +137,31 @@
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
                     <img class="social-icon" src="assets/whatsapp.svg">
-                    <a id="social-link-name" href="#">WhatsApp</a>
+                    <a class="social-link-name" href="#">WhatsApp</a>
                 </div>
                 <div id="instagram">
                     <img class="social-icon" src="assets/instagram.svg">
-                    <a id="social-link-name" href="#">Instagram</a>
+                    <a class="social-link-name" href="#">Instagram</a>
                 </div>
                 <div id="facebook">
                     <img class="social-icon" src="assets/facebook.svg">
-                    <a id="social-link-name" href="#">Facebook</a>
+                    <a class="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
             <div id="quick-links">
                 <a id="quick-links-title">Quick Links</a>
-                <a id="quick-link-name" href="">Home</a>
-                <a id="quick-link-name" href="">Contact Us</a>
-                <a id="quick-link-name" href="">Our Products</a>
-                <a id="quick-link-name" href="">About Us</a>
-                <a id="quick-link-name" href="">Our Services</a>
+                <a class="quick-link-name" href="">Home</a>
+                <a class="quick-link-name" href="">Contact Us</a>
+                <a class="quick-link-name" href="">Our Products</a>
+                <a class="quick-link-name" href="">About Us</a>
+                <a class="quick-link-name" href="">Our Services</a>
             </div>
         </div>
         <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
             CreativeDroplets With GraphityFactory.</div>
     </footer>
 
+    <script src="../JavaScript/main.js"></script>
 </body>
 
 </html>
