logo changed to png

--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <img id="header-logo" src="../assets/Logo.svg" alt="Bhawani Decorators Logo">
+        <img id="header-logo" src="../assets/Logo.png" alt="Bhawani Decorators Logo">
         <img id="header-title" onclick="redirectHome()" src="../assets/Title.svg" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
