--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!--Main Landing Page Starts-->
     <div id="first-body">
         <header>
-            <img id="header-logo" src="assets/Logo.svg" alt="Bhawani Decorators Logo">
+            <img id="header-logo" src="assets/Logo.png" alt="Bhawani Decorators Logo">
             <img id="header-title" style="cursor: unset;" src="assets/Title.svg" alt="Title of Page">
             <div id="header-nav">
                 <a class="nav-links" href="pages/product&service.html">Services</a>&nbsp;&nbsp;
