--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <img id="header-logo" src="../assets/Logo.png" alt="Bhawani Decorators Logo">
+        <img id="header-logo" src="../assets/Logo.svg" alt="Bhawani Decorators Logo">
         <img id="header-title" onclick="redirectHome()" src="../assets/Title.svg" alt="Title of Page">
         <div id="header-nav">
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
@@ -108,7 +108,7 @@
     <div id="footer-links">
         <div id="contact">
             <div id="location">
-                <img class="contact-icon" src="assets/location.svg" alt="Location Icon" />
+                <img class="contact-icon" src="../assets/location.svg" alt="Location Icon" />
                 <div class="contact-details">
                     <div class="detail-title">Address</div>
                     <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
@@ -117,14 +117,14 @@
                 </div>
             </div>
             <div id="call-us">
-                <img class="contact-icon" src="assets/phone.svg" alt="Location Icon" />
+                <img class="contact-icon" src="../assets/phone.svg" alt="Location Icon" />
                 <div class="contact-details">
                     <div class="detail-title">Call Us</div>
                     <div class="detail-subtitle">+91-70001 62913</div>
                 </div>
             </div>
             <div id="email-us">
-                <img class="contact-icon" src="assets/email.svg" alt="Location Icon" />
+                <img class="contact-icon" src="../assets/email.svg" alt="Location Icon" />
                 <div class="contact-details">
                     <div class="detail-title">Email Us</div>
                     <div class="detail-subtitle">sara.sanders@gmail.com</div>
@@ -134,15 +134,15 @@
         <div id="social-links">
             <div id="social-links-title">Social Links</div>
             <div id="whatsapp">
-                <img class="social-icon" src="assets/whatsapp.svg">
+                <img class="social-icon" src="../assets/whatsapp.svg">
                 <a class="social-link-name" href="#">WhatsApp</a>
             </div>
             <div id="instagram">
-                <img class="social-icon" src="assets/instagram.svg">
+                <img class="social-icon" src="../assets/instagram.svg">
                 <a class="social-link-name" href="#">Instagram</a>
             </div>
             <div id="facebook">
-                <img class="social-icon" src="assets/facebook.svg">
+                <img class="social-icon" src="../assets/facebook.svg">
                 <a class="social-link-name" href="#">Facebook</a>
             </div>
         </div>
