image fix gallery page

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -61,7 +61,7 @@
         <div class="portrait-images">
             <img src="../assets/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="workImage(-1)" />
             <div class="portrait-images-box">
-                <img class="images first-image" src="assets/portrait-img-01.png" alt="Image">
+                <img class="images first-image" src="../assets/portrait-img-01.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-02.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-03.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-04.png" alt="Image">
@@ -89,7 +89,7 @@
         <div class="portrait-images">
             <img src="../assets/Previous.svg" class="slide-btn float-btn-left btn-main" onclick="productImage(-1)" />
             <div class="portrait-images-box">
-                <img class="images first-image" src="assets/portrait-img-01.png" alt="Image">
+                <img class="images first-image" src="../assets/portrait-img-01.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-02.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-03.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-04.png" alt="Image">
