--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -94,6 +94,11 @@
                 <img class="images" src="../assets/portrait-img-03.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-04.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-05.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-01.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-02.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-03.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-04.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
                 <div class="btn-mobile" style="display: none;">
                     <img src="../assets/Previous.svg" class="slide-btn float-btn-left" onclick="productImage(-1)" />
                     <img src="../assets/Next.svg" class="slide-btn float-btn-right" onclick="productImage(1)" />
@@ -103,61 +108,61 @@
         </div>
     </div>
 
-<footer>
-    <div id="footer-title">BHAWANI DECORATORS</div>
-    <div id="footer-links">
-        <div id="contact">
-            <div id="location">
-                <img class="contact-icon" src="../assets/location.svg" alt="Location Icon" />
-                <div class="contact-details">
-                    <div class="detail-title">Address</div>
-                    <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
-                        WEST
-                        BENGAL, INDIA</div>
+    <footer>
+        <div id="footer-title">BHAWANI DECORATORS</div>
+        <div id="footer-links">
+            <div id="contact">
+                <div id="location">
+                    <img class="contact-icon" src="../assets/location.svg" alt="Location Icon" />
+                    <div class="contact-details">
+                        <div class="detail-title">Address</div>
+                        <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
+                            WEST
+                            BENGAL, INDIA</div>
+                    </div>
+                </div>
+                <div id="call-us">
+                    <img class="contact-icon" src="../assets/phone.svg" alt="Location Icon" />
+                    <div class="contact-details">
+                        <div class="detail-title">Call Us</div>
+                        <div class="detail-subtitle">+91-70001 62913</div>
+                    </div>
+                </div>
+                <div id="email-us">
+                    <img class="contact-icon" src="../assets/email.svg" alt="Location Icon" />
+                    <div class="contact-details">
+                        <div class="detail-title">Email Us</div>
+                        <div class="detail-subtitle">sara.sanders@gmail.com</div>
+                    </div>
                 </div>
             </div>
-            <div id="call-us">
-                <img class="contact-icon" src="../assets/phone.svg" alt="Location Icon" />
-                <div class="contact-details">
-                    <div class="detail-title">Call Us</div>
-                    <div class="detail-subtitle">+91-70001 62913</div>
+            <div id="social-links">
+                <div id="social-links-title">Social Links</div>
+                <div id="whatsapp">
+                    <img class="social-icon" src="../assets/whatsapp.svg">
+                    <a class="social-link-name" href="#">WhatsApp</a>
+                </div>
+                <div id="instagram">
+                    <img class="social-icon" src="../assets/instagram.svg">
+                    <a class="social-link-name" href="#">Instagram</a>
+                </div>
+                <div id="facebook">
+                    <img class="social-icon" src="../assets/facebook.svg">
+                    <a class="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
-            <div id="email-us">
-                <img class="contact-icon" src="../assets/email.svg" alt="Location Icon" />
-                <div class="contact-details">
-                    <div class="detail-title">Email Us</div>
-                    <div class="detail-subtitle">sara.sanders@gmail.com</div>
-                </div>
+            <div id="quick-links">
+                <a id="quick-links-title">Quick Links</a>
+                <a class="quick-link-name" href="">Home</a>
+                <a class="quick-link-name" href="">Contact Us</a>
+                <a class="quick-link-name" href="">Our Products</a>
+                <a class="quick-link-name" href="">About Us</a>
+                <a class="quick-link-name" href="">Our Services</a>
             </div>
         </div>
-        <div id="social-links">
-            <div id="social-links-title">Social Links</div>
-            <div id="whatsapp">
-                <img class="social-icon" src="../assets/whatsapp.svg">
-                <a class="social-link-name" href="#">WhatsApp</a>
-            </div>
-            <div id="instagram">
-                <img class="social-icon" src="../assets/instagram.svg">
-                <a class="social-link-name" href="#">Instagram</a>
-            </div>
-            <div id="facebook">
-                <img class="social-icon" src="../assets/facebook.svg">
-                <a class="social-link-name" href="#">Facebook</a>
-            </div>
-        </div>
-        <div id="quick-links">
-            <a id="quick-links-title">Quick Links</a>
-            <a class="quick-link-name" href="">Home</a>
-            <a class="quick-link-name" href="">Contact Us</a>
-            <a class="quick-link-name" href="">Our Products</a>
-            <a class="quick-link-name" href="">About Us</a>
-            <a class="quick-link-name" href="">Our Services</a>
-        </div>
-    </div>
-    <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
-        CreativeDroplets With GraphityFactory.</div>
-</footer>
+        <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
+            CreativeDroplets With GraphityFactory.</div>
+    </footer>
     <script src="../JavaScript/gallery.js"></script>
     <script src="../JavaScript/main.js"></script>
 
