--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
         </div>
-        <a class="see-more-buttons" href="">Browse All Products</a>
+        <a class="see-more-buttons" href="pages/product&service.html">Browse All Products</a>
     </div>
     <!--Our Products Ends-->
     <!--Our Services Starts -->
@@ -234,7 +234,7 @@
             </div>
             <img src="assets/Next.svg" class="slide-btn float-btn-right btn-main" onclick="workImage(1)" />
         </div>
-        <a class="see-more-buttons" href="">See All Images</a>
+        <a class="see-more-buttons" href="pages/gallery.html">See All Images</a>
     </div>
 
     <!--Footer Starts-->
@@ -295,8 +295,8 @@
     </footer>
     <!--Footer Ends-->
 
-    <script src="JavaScript/gallery.js"></script>
     <script src="JavaScript/main.js"></script>
+    <script src="JavaScript/gallery.js"></script>
 </body>
 
 </html>
