--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -44,8 +44,17 @@
     <div class="landscape-images">
         <img src="../assets/Previous.svg" class="slide-btn slide-btn-left" onclick="plusDivs(-1)" />
         <div class=".images-box">
-            <img class="mySlides" src="../assets/gallery-web-img-01.png" style="width:100%">
-            <img class="mySlides" src="../assets/gallery-web-img-02.png" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-01.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-02.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-03.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-04.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-05.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-06.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-07.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-08.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-09.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-10.jpg" style="width:100%">
+            <img class="mySlides" src="../assets/wide-images/desktop-img-11.jpg" style="width:100%">
             <!-- <img class="mySlides" src="img_mountains.jpg" style="width:100%">
             <img class="mySlides" src="img_forest.jpg" style="width:100%"> -->
         </div>
@@ -66,11 +75,12 @@
                 <img class="images" src="../assets/portrait-img-03.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-04.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-05.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-01.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
+                <!-- <img class="images" src="../assets/portrait-img-01.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-02.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-03.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-05.png" alt="Image"> -->
                 <div class="btn-mobile" style="display: none;">
                     <img src="../assets/Previous.svg" class="slide-btn float-btn-left" onclick="workImage(-1)" />
                     <img src="../assets/Next.svg" class="slide-btn float-btn-right" onclick="workImage(1)" />
@@ -94,11 +104,12 @@
                 <img class="images" src="../assets/portrait-img-03.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-04.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-05.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-01.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
+                <!-- <img class="images" src="../assets/portrait-img-01.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-02.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-03.png" alt="Image">
                 <img class="images" src="../assets/portrait-img-04.png" alt="Image">
-                <img class="images" src="../assets/portrait-img-05.png" alt="Image">
+                <img class="images" src="../assets/portrait-img-05.png" alt="Image"> -->
                 <div class="btn-mobile" style="display: none;">
                     <img src="../assets/Previous.svg" class="slide-btn float-btn-left" onclick="productImage(-1)" />
                     <img src="../assets/Next.svg" class="slide-btn float-btn-right" onclick="productImage(1)" />
