--- a/pages/about.html
+++ b/pages/about.html
@@ -21,6 +21,85 @@
 </head>
 
 <body>
+    <!-- Model Box Starts Here -->
+
+    <div class="model-background hide-model">
+        <div class="modelBox">
+            <img class="close-button" src="assets/svg/close-model.svg" />
+            <div class="model-contents">
+                <div class="mail-form">
+                    <div class="main-heading">Send Us A Message</div>
+                    <div class="text-box">
+                        <label for="name">Your Name</label><br>
+                        <input type="text" name="user-name" id="user-name">
+                    </div>
+                    <div class="text-box">
+                        <label for="mail">Mail</label><br>
+                        <input type="text" name="user-main" id="user-main">
+                    </div>
+                    <div class="text-box">
+                        <label for="message">Message</label><br>
+                        <textarea name="user-message" id="user-message" cols="30" rows="10"></textarea>
+                    </div>
+                    <button class="send-mail-btn" type="button">Send</button>
+                </div>
+                <span class="divider"></span>
+                <div id="contact-info">
+                    <div class="main-heading">Contact Information</div>
+                    <div id="location">
+                        <img class="contact-icon" src="assets/svg/location-black.svg" alt="Location Icon" />
+                        <div class="contact-details">
+                            <div class="detail-title model-style">Address</div>
+                            <div class="detail-subtitle model-style">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE
+                                11(W)
+                                KOLKATA - 700
+                                073,
+                                WEST
+                                BENGAL, INDIA</div>
+                        </div>
+                    </div>
+                    <div id="call-us">
+                        <img class="contact-icon" src="assets/svg/phone-black.svg" alt="Location Icon" />
+                        <div class="contact-details">
+                            <div class="detail-title model-style">Call Us</div>
+                            <div class="detail-subtitle model-style">+91-70001 62913</div>
+                        </div>
+                    </div>
+                    <div id="email-us">
+                        <img class="contact-icon" src="assets/svg/email-black.svg" alt="Location Icon" />
+                        <div class="contact-details">
+                            <div class="detail-title model-style">Email Us</div>
+                            <div class="detail-subtitle model-style">sara.sanders@gmail.com</div>
+                        </div>
+                    </div>
+                    <div class="model-social-links">
+                        <img class="model-social-icon" src="assets/svg/whatsapp-model-icon.svg" alt="Whatsapp Icon" />
+                        <img class="model-social-icon" src="assets/svg/insta-model-icon.svg" alt="Instagram Icon" />
+                        <img class="model-social-icon" src="assets/svg/facebook-model-icon.svg" alt="Facebook Icon" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Model Box Ends Here -->
+<!-- Mobile Navigation Starts Here -->
+
+<div class="mobile-nav-background">
+    <div class="mobile-nav">
+        <img class="close-mobile-nav" onclick="toggleMobileNav()" src="assets/svg/close-model-white.svg" />
+        <div class="mobile-nav-items" onclick="animateRedirectTo('/')">Home</div>
+        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/product&service.html')">Services</div>
+        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/product&service.html#our-products')">Products
+        </div>
+        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/galleryhtml')">Gallery</div>
+        <div class="mobile-nav-items" onclick="animateRedirectTo('pages/about.html')">About Us</div>
+    </div>
+</div>
+
+<!-- Mobile Navigation Ends Here -->
+
+
     <header>
         <img id="header-logo" src="../assets/svg/Logo.svg" alt="Bhawani Decorators Logo">
         <img id="header-title" onclick="redirectHome()" src="../assets/svg/Title.svg" alt="Title of Page">
@@ -104,13 +183,13 @@
 
     </div>
 
-
+    <!--Footer Starts-->
     <footer>
         <div id="footer-title">BHAWANI DECORATORS</div>
         <div id="footer-links">
             <div id="contact">
                 <div id="location">
-                    <img class="contact-icon" src="../assets/svg/location.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="assets/svg/location.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Address</div>
                         <div class="detail-subtitle">29 - B, RABINDRA SARANI, 3RD FLOOR, SUITE 11(W) KOLKATA - 700 073,
@@ -119,14 +198,14 @@
                     </div>
                 </div>
                 <div id="call-us">
-                    <img class="contact-icon" src="../assets/svg/phone.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="assets/svg/phone.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Call Us</div>
                         <div class="detail-subtitle">+91-70001 62913</div>
                     </div>
                 </div>
                 <div id="email-us">
-                    <img class="contact-icon" src="../assets/svg/email.svg" alt="Location Icon" />
+                    <img class="contact-icon" src="assets/svg/email.svg" alt="Location Icon" />
                     <div class="contact-details">
                         <div class="detail-title">Email Us</div>
                         <div class="detail-subtitle">sara.sanders@gmail.com</div>
@@ -136,31 +215,32 @@
             <div id="social-links">
                 <div id="social-links-title">Social Links</div>
                 <div id="whatsapp">
-                    <img class="social-icon" src="../assets/svg/whatsapp.svg">
+                    <img class="social-icon" src="assets/svg/whatsapp.svg">
                     <a class="social-link-name" href="#">WhatsApp</a>
                 </div>
                 <div id="instagram">
-                    <img class="social-icon" src="../assets/svg/instagram.svg">
-                    <a class="social-link-name" href="#">Instagram</a>
+                    <img class="social-icon" src="assets/svg/instagram.svg">
+                    <a class="social-link-name" href="https://www.instagram.com/bhawanidecorators/">Instagram</a>
                 </div>
                 <div id="facebook">
-                    <img class="social-icon" src="../assets/svg/facebook.svg">
+                    <img class="social-icon" src="assets/svg/facebook.svg">
                     <a class="social-link-name" href="#">Facebook</a>
                 </div>
             </div>
             <div id="quick-links">
                 <a id="quick-links-title">Quick Links</a>
-                <a class="quick-link-name" href="">Home</a>
-                <a class="quick-link-name" href="">Contact Us</a>
-                <a class="quick-link-name" href="">Our Products</a>
-                <a class="quick-link-name" href="">About Us</a>
-                <a class="quick-link-name" href="">Our Services</a>
+                <a class="quick-link-name" onclick="redirectHome()">Home</a>
+                <a class="quick-link-name" onclick="toggleModel()">Contact Us</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/product&service.html#our-products')">Our
+                    Products</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/about.html')">About Us</a>
+                <a class="quick-link-name" onclick="redirectTo('pages/product&service.html')">Our Services</a>
             </div>
         </div>
         <div id="copyright-claims">Copyright @2022 Bhawani Decorators, All Right Reserved. Design and Developed by
             CreativeDroplets With GraphityFactory.</div>
     </footer>
-
+    <!--Footer Ends-->
     <script src="../JavaScript/main.js"></script>
 </body>
 
