mobile nav added for all pages

--- a/pages/product&service.html
+++ b/pages/product&service.html
@@ -109,7 +109,7 @@
             <a class="nav-links" href="product&service.html">Services</a>&nbsp;&nbsp;
             <a class="nav-links" href="gallery.html">Gallery</a>&nbsp;&nbsp;
             <a class="nav-links" href="about.html">About Us</a>&nbsp;&nbsp;
-            <img id="burger-menu" src="../assets/svg/burget-menu.svg" alt="Burger Menu Icon">
+            <img id="burger-menu" onclick="toggleMobileNav()" src="../assets/svg/burget-menu.svg" alt="Burger Menu Icon">
         </div>
     </header>
     <div id="hero-section">
